<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Manage Dr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_desc_add_new_doctor">Add New Doctor</string>
    <string name="hint_enter_the_doctor_name">Doctor Name</string>
    <string name="hint_enter_the_hospital_name">Hospital/Clinic name</string>
    <string name="hint_enter_the_area_of_specialization">Area of Specialization</string>
    <string name="hint_area_of_specialization_helper_text">Eg. Cardio,Neuro,General Physician</string>
    <string name="save">Save</string>
    <string name="created_on">Created on %s</string>
    <string name="hint_enter_the_mobile_number">Mobile number</string>
    <string name="content_desc_mobile_number">mobile number</string>
    <string name="add_service">New Service</string>
    <string name="add_collection">New Return</string>
    <string name="hint_enter_the_category">Category name</string>
    <string name="enter_the_city">City name</string>
    <string name="hint_select_transaction_date">Transaction date %s</string>
    <string name="text_add_service">Add Service</string>
    <string name="text_add_return">Add Return</string>
    <string name="enter_transaction_amount">Transaction amount</string>
    <string name="hint_add_new_category">Add new division</string>
    <string name="hint_add_new_city">Add new city</string>
    <string name="division_name">Division name</string>
    <string name="btn_text_add">Add</string>
    <string name="date_of_birth">Date of birth %1s</string>
    <string name="wedding_anniversary_date">Wedding anniversary %1s</string>
    <string name="error_please_select_a_city">Please select a city</string>
    <string name="error_please_select_division">Please select a division</string>
    <string name="error_please_select_a_transaction_date">Please select the transaction date</string>
    <string name="new_service_created">New service created successfully</string>
    <string name="hint_category_helper">Eg. Cardio,Oral care</string>
    <string name="new_collection_created">New return created successfully</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hint_service">Service</string>
    <string name="hint_return">Return</string>
    <string name="hint_search">Search</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_city">City</string>
    <string name="hint_division">Division</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_clear_all">Clear all</string>
    <string name="select_division">Select Division</string>
    <string name="select_city">Select City</string>
    <string name="amount">₹%1s</string>
    <string name="hint_newest_first">Newest First</string>
    <string name="hint_oldest_first">Oldest First</string>
    <string name="sort_asc">Sort by Name (A - Z)</string>
    <string name="sort_desc">Sort by Name (Z - A)</string>
    <string name="hint_sort">Sort</string>
    <string name="hint_expand">Expand/Collapse</string>
    <string name="total_service">Total Service\n %1s</string>
    <string name="total_return">Total Return\n %1s</string>
    <string name="hint_birthday_date">birthday date</string>
    <string name="edit">edit</string>
    <string name="settings">Settings</string>
    <string name="categories">Divisions</string>
    <string name="settings_editable">Divisions, Cities</string>
    <string name="cities">Cities</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import existing data</string>
    <string name="data_export_channel_description">Show a persistant notification when the data export process is running</string>
    <string name="data_export_notification_title">Data export is in progress</string>
    <string name="data_export_completed_channel_description">Notify once the data export is completed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_dialog_message">All transactions associated with %s will also be deleted</string>
    <string name="content_desc_delete">delete</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="close">Close</string>
    <string name="delete_transaction_message">Are you sure to delete this transaction?</string>
    <string name="transaction_delete_successfully">Transaction deleted successfully</string>
    <string name="edit_service">Edit Service</string>
    <string name="edit_return">Edit Return</string>
    <string name="transaction_updated_successfully">Transaction updated successfully</string>
    <string name="no_doctors_found">No Doctors Found!</string>
    <string name="no_transactions_found">No transactions found!</string>
</resources>