<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.ui.SettingsFragment"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/textHeadingStyle"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_0"
            android:layout_marginTop="16dp"
            android:minHeight="36dp"
            android:gravity="center_vertical"
            android:text="@string/categories"
            android:layout_marginStart="12dp"
            style="@style/textViewRegular"/>

        <TextView
            android:id="@+id/tv_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories"
            android:layout_marginTop="8dp"
            android:minHeight="36dp"
            android:gravity="center_vertical"
            android:text="@string/cities"
            android:layout_marginStart="12dp"
            style="@style/textViewRegular"/>

        <TextView
            android:id="@+id/tv_export_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cities"
            android:layout_marginTop="8dp"
            android:minHeight="36dp"
            android:gravity="center_vertical"
            android:text="@string/export_data"
            android:layout_marginStart="12dp"
            style="@style/textViewRegular"/>

        <TextView
            android:id="@+id/tv_import_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_export_data"
            android:layout_marginTop="8dp"
            android:text="@string/import_data"
            android:minHeight="36dp"
            android:gravity="center_vertical"
            android:layout_marginStart="12dp"
            style="@style/textViewRegular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>