<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.geekydroid.managedr.ui.addnewservice.viewmodel.AddNewServiceFragmentViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addnewservice.ui.NewServiceFragment">

        <TextView
            android:id="@+id/tv_heading"
            style="@style/textHeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_add_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_doctor_name"
            style="@style/textViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@{viewmodel._doctorName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading" />


        <Spinner
            android:id="@+id/spinner_category"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/fab_add_new_category"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_new_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/hint_add_new_category"
            android:focusable="true"
            android:onClick="@{() -> viewmodel.addNewCategoryClicked()}"
            android:src="@drawable/add_icon"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_category" />

        <Spinner
            android:id="@+id/spinner_city"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/fab_add_new_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_new_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/hint_add_new_city"
            android:focusable="true"
            android:onClick="@{() -> viewmodel.addNewCityClicked()}"
            android:src="@drawable/add_icon"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_city" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_service_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_city">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_transaction_amount"
                android:inputType="number"
                android:text="@={viewmodel._transactionAmount}"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_transaction_date_picker"
            style="@style/textViewRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="@{() -> viewmodel.datePickerClicked()}"
            android:padding="8dp"
            android:text="@string/hint_select_transaction_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_service_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>